[metadata]
name = accera
author = Microsoft Research AI Compilers Team
author_email = mlodev@microsoft.com
summary = Accera - An optimizing cross-compiler for compute-intensive code
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
platforms = Linux, Darwin, Windows
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = ~=3.7
zip_safe = False
setup_requires =
    setuptools>=31
    setuptools_scm
install_requires =
    termcolor
    py-cpuinfo
    varname
    hatlib>=0.0.23
    numpy
    pyyaml
    tomlkit
    accera-compilers
    accera-llvm
package_dir =
    accera = accera/python/accera
    accera.hat = accera/hat/scripts
    accera.lang = accera/python/accera/lang
    accera.samples = accera/python/samples
    accera.test = accera/python/accera/test
